<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="30sp"
            android:text="@string/timer"
            />
        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/start"
            />
        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/stop"
            />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/reset"
            />
        <Button
            android:id="@+id/save_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/save_time"
            />

        <TextView
            android:id="@+id/last_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_time" />

        <TextView
            android:id="@+id/avg_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_time" />

        <TextView
            android:id="@+id/min_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_time" />

        <TextView
            android:id="@+id/max_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_time" />
    </LinearLayout>
</ScrollView>